--- a/cliente/src/app/app.component.html
+++ b/cliente/src/app/app.component.html
@@ -1,2 +1,6 @@
+<md-toolbar color="primary">
 
-<app-preguntas-oposicion></app-preguntas-oposicion>
+  <span>{{title}}</span>
+</md-toolbar>
+
+<router-outlet></router-outlet>
