Subire la carga dinamica de los link
Ver un ejemplo de como cargar los datos de los link.

--- a/cliente/src/app/preguntas-oposicion/preguntas-oposicion.component.html
+++ b/cliente/src/app/preguntas-oposicion/preguntas-oposicion.component.html
@@ -1,3 +1,5 @@
-
+<md-toolbar color="primary">
+  <span>Cuestionario del año {{anio}}</span>
+</md-toolbar>
 <app-pregunta *ngFor="let pregunta of preguntas" [pregunta]="pregunta"></app-pregunta> 
 
