--- a/cliente/src/app/cuestionario/cuestionario.component.html
+++ b/cliente/src/app/cuestionario/cuestionario.component.html
@@ -3,8 +3,5 @@
    <md-list-item> A2 </md-list-item>
    <md-divider></md-divider>
    <h3 md-subheader>Cuestionario</h3>
-   <md-list-item> <a  [routerLink]="['/preguntas/2014']" >2014</a> </md-list-item>
-   <md-list-item> <a  [routerLink]="['/preguntas/2013']" >2013</a> </md-list-item>
-   <md-list-item> <a  [routerLink]="['/preguntas/2011']" >2011</a> </md-list-item>
-   
+   <md-list-item *ngFor="let anio of anios"> <a  [routerLink]="['/preguntas',anio]" > Cuestionario del {{anio}}</a> </md-list-item>
 </md-list>
