Establecer la barra de progreso
Hemos establecido la barra de progreso, respecto aal formulario y
corregido un problema de los test
close #3

--- a/cliente/src/app/preguntas-oposicion/preguntas-oposicion.component.html
+++ b/cliente/src/app/preguntas-oposicion/preguntas-oposicion.component.html
@@ -1,5 +1,7 @@
 <md-toolbar color="primary">
   <span>Cuestionario del año {{anio}}</span>
+  <md-icon fontSet="myfont">help</md-icon>
 </md-toolbar>
+<md-progress-bar mode="buffer" [value]="avance" bufferValue="80"></md-progress-bar>
 <app-pregunta *ngFor="let pregunta of preguntas" [pregunta]="pregunta"></app-pregunta> 
 
