--- a/cliente/src/app/cuestionario/cuestionario.component.html
+++ b/cliente/src/app/cuestionario/cuestionario.component.html
@@ -1,6 +1,6 @@
 <md-list>
    <h3 md-subheader>Temario</h3>
-   <md-list-item> A2 </md-list-item>
+   <md-list-item> <a [routerLink]="['/temario']">A2</a> </md-list-item>
    <md-divider></md-divider>
    <h3 md-subheader>Cuestionario</h3>
    <md-list-item *ngFor="let anio of anios"> <a  [routerLink]="['/preguntas',anio]" > Cuestionario del {{anio}}</a> </md-list-item>
