--- a/cliente/src/app/tema/tema.component.html
+++ b/cliente/src/app/tema/tema.component.html
@@ -6,6 +6,7 @@
      </md-card-content>
     <md-card-actions layout="row" layout-align="end center">
       <button md-button >Test</button>
+      <button md-button (click)="nuevoDocumento()" >Documento</button>
     </md-card-actions>
   </md-card>  
   
